--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -21,7 +21,7 @@
       <td><%= user.email %></td>
       <td><%= user.nickname %></td>
       <td><%= link_to 'Show', user_path(@user) %></td>
-      <td><%= link_to 'Destroy', user, method: :destroy %></td>
+      <td><%= link_to 'Destroy', user, method: :delete %></td>
     </tr>
     <% end %>
   </tbody>
