--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -20,7 +20,7 @@
       <td><%= user.last_name %></td>
       <td><%= user.email %></td>
       <td><%= user.nickname %></td>
-      <td><%= link_to 'Show', user_path(@user) %></td>
+      <td><%= link_to 'Show', user %></td>
       <td><%= link_to 'Destroy', user, method: :delete %></td>
     </tr>
     <% end %>
