--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,25 @@
 <h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<p id="notice"><%= notice %></p>
+
+<p>
+  <strong>First name</strong>
+  <%= @user.first_name %>
+</p>
+
+<p>
+  <strong>Last name</strong>
+  <%= @user.last_name %>
+</p>
+
+<p>
+  <strong>Nickname</strong>
+  <%= @user.nickname %>
+</p>
+
+<p>
+  <strong>Email</strong>
+  <%= @user.email %>
+</p>
+
+<%= link_to 'Edit', edit_user_path(@user) %>
+<%= link_to 'Back', users_path %>
