--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,6 @@
 <h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+
+<%= render 'form', user: @user %>
+
+<%= link_to 'Show', @user %>
+<%= link_to "back", users_path %>
