--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -32,4 +32,10 @@
 
 <br>
 
-<%= link_to 'Создать новый продукт', new_product_path %>
+<%= link_to 'Создать новый продукт', new_product_path %> 
+<p></p>
+<% if current_user.nil? %>
+  <%= link_to new_user_session_path, class: 'login-button' do %>Sign in<% end %>
+<% else %>
+  <%= link_to products_path, class: 'login-button' do %>Go to App<% end %>
+<% end %>
