--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -37,5 +37,5 @@
 <% if current_user.nil? %>
   <%= link_to new_user_session_path, class: 'login-button' do %>Sign in<% end %>
 <% else %>
-  <%= link_to products_path, class: 'login-button' do %>Go to App<% end %>
+  <%= link_to users_path, class: 'login-button' do %>Go to User<% end %>
 <% end %>
