--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -28,3 +28,5 @@
 </table>
 
 <%= link_to 'Add_new_user', new_user_path %>
+<p></p>
+<%= link_to 'sign_out', destroy_user_session_path, method: :delete %>
