--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -2,6 +2,6 @@
 
 <ul>
   <% @cart.line_items.each do |item| %>
-    <li><%= item.product.name %></li>
+    <li><%= item.quantity %> &times; <%= item.product.name %></li>
   <% end %>
-  </ul>
+</ul>
