--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,10 +1,10 @@
 <%= form_for(@order) do |f| %>
   <% if @order.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(order.errors.count, "error") %> prohibited this order from being saved:</h2>
+      <h2><%= pluralize(@order.errors.count, "error") %> prohibited this order from being saved:</h2>
 
       <ul>
-      <% order.errors.full_messages.each do |message| %>
+      <% @order.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
@@ -12,27 +12,38 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br>
+    <%= f.label 'ФИО получателя' %>
     <%= f.text_field :name %>
   </div>
 
   <div class="field">
-    <%= f.label :address %><br>
+    <%= f.label 'Город доставки' %>
     <%= f.text_area :address %>
   </div>
 
   <div class="field">
-    <%= f.label :email %><br>
-    <%= f.text_field :email %>
+    <%= f.label 'Адрес электронной почты' %>
+    <%= f.email_field  :email %>
   </div>
 
   <div class="field">
-    <%= f.label :pay_type %><br>
+    <%= f.label 'Мобильный телефон' %>
+    <%= f.telephone_field  :phone %>
+  </div>
+
+  <div class="field">
+    <%= f.label 'Выберите способ доставки' %>
+    <%= f.select :type_of_delivery, Order::TYPE_Of_DELIVERY,
+        prompt: 'Способ доставки' %>
+  </div>
+
+  <div class="field">
+    <%= f.label 'Выберите способ оплаты' %>
     <%= f.select :pay_type, Order::PAYMENT_TYPES,
-        prompt: 'Select a payment method' %>
+        prompt: 'Способ оплаты' %>
   </div>
 
   <div class="actions">
-    <%= f.submit 'Place Order' %>
+    <%= f.submit 'Подтвердить заказ' %>
   </div>
 <% end %>
