--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New Order</h1>
+<h1>Оформления заказа</h1>
 <div class="depot_form">
   <fieldset>
     <legend>Пожалуйста, введите свои данные</legend>
