--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -33,7 +33,7 @@
 
   <div class="field">
     <%= f.label 'Выберите способ доставки' %>
-    <%= f.select :type_of_delivery, Order::TYPE_Of_DELIVERY,
+    <%= f.select :type_of_delivery, Order::TYPE_OF_DELIVERY,
         prompt: 'Способ доставки' %>
   </div>
 
