--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -15,4 +15,4 @@
 </table>
 
 <%= button_to 'Empty cart', @cart, method: :delete, data: { confirm: 'Are you sure?' } %>
-<%= button_to "Оформить заказ", new_order_path, method: :get %>
+<%= button_to 'Оформить заказ', new_order_path, method: :get %>
