--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -33,14 +33,12 @@
 
   <div class="field">
     <%= f.label 'Выберите способ доставки' %>
-    <%= f.select :type_of_delivery, Order::TYPE_OF_DELIVERY,
-        prompt: 'Способ доставки' %>
+    <%= f.select :type_of_delivery, Order::TYPE_OF_DELIVERY, prompt: 'Способ доставки' %>
   </div>
 
   <div class="field">
     <%= f.label 'Выберите способ оплаты' %>
-    <%= f.select :pay_type, Order::PAYMENT_TYPES,
-        prompt: 'Способ оплаты' %>
+    <%= f.select :pay_type, Order::PAYMENT_TYPES, prompt: 'Способ оплаты' %>
   </div>
 
   <div class="actions">
