--- a/app/views/order_notifier_mailer/received.text.erb
+++ b/app/views/order_notifier_mailer/received.text.erb
@@ -1,10 +1,14 @@
 Уважаемый(ая) <%= @order.name %>
 
-Администрация магазина Podranok благодарит Вас за недавний заказ.
+Администрация магазина Pragmatic Store благодарит Вас за недавний заказ.
 
 Вы заказали следующий товар:
-
 <%= render @order.line_items -%>
 
-Когда Ваш заказ будет отправлен, мы пошлем Вам по электронной почте отдельное
-сообщение.
+В ближайшее время с Вами свяжется наш менеджер для уточнения деталей заказа, и подтверждения заказа.
+
+Контактные данные:
+
+ФИО: <%= @order.name %>
+
+Номер телефона: <%= @order.phone %>
