--- a/app/views/order_notifier_mailer/received.text.erb
+++ b/app/views/order_notifier_mailer/received.text.erb
@@ -1,6 +1,6 @@
 Уважаемый(ая) <%= @order.name %>
 
-Администрация магазина Pragmatic Store благодарит Вас за недавний заказ.
+Администрация магазина Podranok благодарит Вас за недавний заказ.
 
 Вы заказали следующий товар:
 <%= render @order.line_items -%>
