--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -36,6 +36,11 @@
     <%= f.file_field :image %>
   </div>
 
+  <div class="field">
+    <%= f.label :category_id %>
+    <%= f.collection_select :category_id, Category.order(:name), :id, :name, { include_blank: true} %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
