--- a/app/views/line_items/_line_item.text.erb
+++ b/app/views/line_items/_line_item.text.erb
@@ -1,3 +1,1 @@
-<%= sprintf("%2d x %s",
- line_item.quantity,
- truncate(line_item.product.name,  length: 50)) %>
+<%= sprintf("%2d x %s", line_item.quantity, truncate(line_item.product.name, length: 50)) %>
