--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -38,7 +38,7 @@
 
   <div class="field">
     <%= f.label :category_id %>
-    <%= f.collection_select :category_id, Category.order(:name), :id, :name, { include_blank: true} %>
+    <%= f.collection_select :category_id, @сategory, :id, :name, { include_blank: true } %>
   </div>
 
   <div class="actions">
