--- a/app/views/order_notifier_mailer/received.html.erb
+++ b/app/views/order_notifier_mailer/received.html.erb
@@ -5,7 +5,7 @@
 <p><b>Вы заказали следующий товар:</b></p>
 
 <p>
-  <%= render @order.line_items -%>
+  <%= render @order.line_items %>
 </p>
 
 <p><b>В ближайшее время с Вами свяжется наш менеджер для уточнения деталей заказа, и подтверждения заказа.</b></p>
