--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -29,8 +29,10 @@
           <% end %>
         </td>
         <td><%= link_to 'Показать', product %></td>
-        <td><%= link_to 'Изменить ', edit_product_path(product) %></td>
-        <td><%= link_to 'Удалить', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% if user_signed_in? && current_user.admin? %>
+          <td><%= link_to 'Изменить ', edit_product_path(product) %></td>
+          <td><%= link_to 'Удалить', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
         <td><%= button_to 'Add to Cart', line_items_path(product_id: product.id) %></td>
       </tr>
     <% end %>
