--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,6 +1,5 @@
 @import "twitter/bootstrap/bootstrap";
 
-
 @glyphiconsEotPath: font-url("glyphicons-halflings-regular.eot");
 @glyphiconsEotPath_iefix: font-url("glyphicons-halflings-regular.eot?#iefix");
 @glyphiconsWoffPath: font-url("glyphicons-halflings-regular.woff");
@@ -8,4 +7,14 @@
 @glyphiconsSvgPath: font-url("glyphicons-halflings-regular.svg#glyphicons_halflingsregular");
 
 @import "twitter/bootstrap/glyphicons.less";
+
+// Set the Font Awesome (Font Awesome is default. You can disable by commenting below lines)
+@fontAwesomeEotPath: font-url("fontawesome-webfont.eot");
+@fontAwesomeEotPath_iefix: font-url("fontawesome-webfont.eot?#iefix");
+@fontAwesomeWoffPath: font-url("fontawesome-webfont.woff");
+@fontAwesomeTtfPath: font-url("fontawesome-webfont.ttf");
+@fontAwesomeSvgPath: font-url("fontawesome-webfont.svg#fontawesomeregular");
+
+@import "font-awesome";
+
 @link-color: #ff0000;
