--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -14,6 +14,7 @@
           <td><%= index + 1 %></td>
           <td><%= category.name %></td>
           <td><%= category.parent.name if category.parent.present? %></td>
+          <td><%= image_tag  category.image.url(:medium) %></td>
           <td>
             <%= link_to 'Показать', category %>
             <% if user_signed_in? && current_user.admin? %>
@@ -30,5 +31,3 @@
 <% if user_signed_in? && current_user.admin? %>
   <%= link_to 'Новая категория', new_category_path %>
 <% end %>
-
-
