changed views categories html.erb on slim and added a design

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -50,3 +50,9 @@ body{
   width: 600px;
   padding: 10px;
 }
+
+#categories_show {
+  border: 0.5px solid #AAAEB4;
+  text-align: center;
+  padding: 10px;
+}
