--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -24,18 +24,18 @@ html
       nav id="search_end_basket"
         form class="navbar-form"
           div class="form-group"
-            input type="text" class="form-control" placeholder="Search"
-          button type="submit" class="btn btn-default" Submit
+            input type="text" class="form-control" placeholder="Поиск"
+          button type="submit" class="btn btn-default" Отправить
           <!-- логотип корзина -->
-          img href="адрес ссылки"src="https://png.icons8.com/ios/50/000000/shopping-cart.png" width="30" height="30" style="border: 1px solid #AAAEB4; margin-left: 730px;"
+          img href="адрес ссылки"src="https://png.icons8.com/ios/50/000000/shopping-cart.png" width="30" height="30" style="border: 1px solid #AAAEB4; margin-left: 630px;"
           <!-- логотип зарегаться -->
           img src="https://png.icons8.com/ios/50/000000/contacts.png" width="30" height="30" style="border: 1px solid #AAAEB4; margin-left: 10px;"
           - if user_signed_in? 
-            = link_to('Edit registration', edit_user_registration_path) 
-            = link_to('Logout', destroy_user_session_path, :method => :delete)        
+            = link_to('Редактировать профиль', edit_user_registration_path) 
+            = link_to('Выйти', destroy_user_session_path, :method => :delete)        
           - else 
-            = link_to('Register', new_user_registration_path)
-            = link_to('Login', new_user_session_path)
+            = link_to('Зарегистрироваться', new_user_registration_path)
+            = link_to('Авторизоваться', new_user_session_path)
 
     nav id="navigation"        
       nav style="border: 0.5px solid #AAAEB4; padding: 10px; background-color: #323200;"
@@ -53,4 +53,3 @@ html
       nav class="row"
         div class="col-sm-12" style="margin-left: 2px; margin-top: 70px;"
           == render 'shared/category'
-
