--- a/app/views/products/index.slim
+++ b/app/views/products/index.slim
@@ -5,6 +5,5 @@ body
         h6.name = product.name
         img.image_tag = image_tag product.image.url(:medium)
         h6.price = product.price
-        = link_to 'Show', product, :class=>"btn btn-outline-secondary"
-        = button_to 'Add', line_items_path(product_id: product.id), :class=>"btn btn-outline-secondary" 
-
+        = link_to 'Информация', product, :class=>"btn btn-outline-secondary"
+        = button_to 'Добавить в корзину', line_items_path(product_id: product.id), :class=>"btn btn-outline-secondary" 
