--- a/app/views/products/index.slim
+++ b/app/views/products/index.slim
@@ -5,5 +5,8 @@ body
         h6.name = product.name
         img.image_tag = image_tag product.image.url(:medium)
         h6.price = product.price
-        = link_to 'Информация', product, :class=>"btn btn-outline-secondary"
-        = button_to 'Добавить в корзину', line_items_path(product_id: product.id), :class=>"btn btn-outline-secondary" 
+        button style="width: 180px; margin-left: 0px;"
+          = link_to 'Информация', product, :class=>"btn btn-outline-secondary"
+        button style="width: 180px; margin-left: 0px;"
+          = link_to 'Добавить в корзину', line_items_path(product_id: product.id), :class=>"btn btn-outline-secondary" 
+
