--- a/app/views/products/index.slim
+++ b/app/views/products/index.slim
@@ -1,9 +1,15 @@
 body
-  - @products.each do |product|
-    div class="col-lg-3"
-      nav id="productsindex"
-        h6.name = product.name
-        img.image_tag = image_tag product.image.url(:medium)
-        h6.price = product.price
-        = link_to 'Информация', product, :class=>"btn btn-outline-secondary"
-        = button_to 'Добавить в корзину', line_items_path(product_id: product.id), :class=>"btn btn-outline-secondary" 
+  nav class="row"
+    div class="col-sm-12"
+      - @products.each do |product|
+        div class="col-lg-3"
+          nav id="productsindex"
+            h6.name = product.name
+            img.image_tag = image_tag product.image.url(:medium)
+            h6.price = product.price
+            = link_to 'Информация', product, :class=>"btn btn-outline-secondary"
+            = button_to 'Добавить в корзину', line_items_path(product_id: product.id), :class=>"btn btn-outline-secondary"
+    div class="col-lg-10" style="margin-left: 407px;"
+      div class="digg_pagination" 
+        = will_paginate @products
+      
