Added static pages

--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -45,8 +45,9 @@ html
       nav style="border: 0.5px solid #AAAEB4; padding: 10px; background-color: #323200;"
         a[class="nav-link" id="nav1" style="margin-left: 2px; font-size: 20px;" href="http://localhost:3000/categories/2"] Каталог Товаров
         a[class="nav-link" id="nav2" style="font-size: 15px; padding-left: 10px;" href="http://localhost:3000/"] Главная
-        a[class="nav-link" style="font-size: 15px; padding-left: 10px;" href=""] О нас 
-        a[class="nav-link" style="font-size: 15px; padding-left: 10px;" href="#"] Контакты
+        a[class="nav-link" style="font-size: 15px; padding-left: 10px;" href="http://localhost:3000/about_company"] О компании 
+        a[class="nav-link" style="font-size: 15px; padding-left: 10px;" href="http://localhost:3000/contact"] Контакты
+        a[class="nav-link" style="font-size: 15px; padding-left: 10px;" href="http://localhost:3000/info"] Статьи
 
     nav class="category_end_yield"
       nav class="row"
