--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -24,6 +24,8 @@
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
+
+  <%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path %>
 <% end %>
 
 <%= render "users/shared/links" %>
