changed the design  show product

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -1,3 +1,12 @@
 form, div {
   display: inline;
 }
+
+#products_show_image {
+  width: 450px;
+  text-align: center;
+}
+
+#products_show_name {
+  text-align: center;
+}
