--- a/app/views/products/show.slim
+++ b/app/views/products/show.slim
@@ -1,35 +1,26 @@
-p id="notice"
-  = notice 
-
-p 
-  strong Name:
-  = @product.name
-
-p
-  strong Description:
-  = @product.description
-
-p
-  strong Price:
-  = @product.price
-
-p
-  strong Weight:
-  = @product.weight
-
-p
-  strong Image:
-  = image_tag @product.image.url(:medium)
-
-p
-  strong Catalog:
-  - if @product.category.present? 
-    = link_to @product.category.name, @product.category 
-
-p
-  strong Category:
-  - if @product.category.parent.present? 
-    = link_to @product.category.parent.name, @product.category.parent
-
-= link_to 'Edit', edit_product_path(@product)
-= link_to 'Back', products_path 
+body
+  nav class="row"
+    div class="col-sm-5" id="products_show_image"
+      div
+        br
+          = image_tag @product.image.url(:medium)
+      div
+        br
+          = button_to 'Добавить в корзину', line_items_path(product_id: @product.id), :class=>"btn btn-outline-secondary"
+    div class="col-sm-6" id="products_show_name"
+      div
+        br
+          - if @product.category.parent.present? 
+            = link_to @product.category.parent.name, @product.category.parent
+          div >>
+          - if @product.category.present? 
+            = link_to @product.category.name, @product.category
+      div
+        br
+          = @product.name
+      div
+        br
+          = @product.price
+    div class="col-sm-12" 
+      div
+        h4 = @product.description
