corrected the mistake rails_admin undefined method 'per'

--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -50,7 +50,7 @@ html
         a[class="nav-link" id="nav2" style="font-size: 15px; padding-left: 10px;" href="http://localhost:3000/"] Главная
         a[class="nav-link" style="font-size: 15px; padding-left: 10px;" href="http://localhost:3000/about_company"] О компании 
         a[class="nav-link" style="font-size: 15px; padding-left: 10px;" href="http://localhost:3000/contact"] Контакты
-        a[class="nav-link" style="font-size: 15px; padding-left: 10px;" href="http://localhost:3000/info"] Статьи
+        a[class="nav-link" style="font-size: 15px; padding-left: 10px;" href="http://localhost:3000/articles"] Статьи
 
     nav class="category_end_yield"
       nav class="row"
