--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -8,31 +8,37 @@ html
     link rel="stylesheet" type="text/css" href="style.scss"
     = csrf_meta_tags
 
-  body
-    nav id="logo_end_links"
-      nav style="border: 0.5px solid #AAAEB4; background-color: #2A2A2A;"
-          a[style="margin-left: 15px;" href="https://www.youtube.com/channel/UC9pxec4wq-yMRjjXi9IvROQ?view_as=subscriber"]
-            img.image_tag = image_tag('logo.png')
-          a[style="margin-left: 950px;" href="https://www.facebook.com/groups/ZhittyaMislivtsiv/"] 
-            img.image_tag = image_tag('facebook.png', height: '30', width: '30')
-          a[style="margin-left: 10px;" href="https://www.youtube.com/channel/UC9pxec4wq-yMRjjXi9IvROQ?view_as=subscriber"] 
-            img.image_tag = image_tag('youtube.png', height: '30', width: '30')
-          a[style="margin-left: 10px;" href="https://twitter.com/"] 
-            img.image_tag = image_tag('twitter.png', height: '30', width: '30')
-            
-    div class="container"
-      nav id="search_end_basket"
-        form class="navbar-form"
-          div class="input-group"
-            = form_tag(products_path, method: "get", id: "search-form") do
-              = text_field_tag :search, params[:search], placeholder: "Поиск", class: 'form-control'
-              span class="input-group-btn"
-                = submit_tag "Отправить", class: 'btn btn-default'
+  body 
+    nav id="topborder"
+      nav class="row"
+        nav class="col-sm-3"
+          nav id="search"
+            form class="navbar-form"
+              div class="input-group" id="topul"
+                = form_tag(products_path, method: "get", id: "search-form") do
+                  = text_field_tag :search, params[:search], placeholder: "Поиск", class: 'form-control'
+                  span class="input-group-btn"
+                    = submit_tag "Отправить", class: 'btn btn-default'
+        nav class="col-sm-3" 
           <!-- логотип корзина -->
-          div style="margin-left: 475px;"
+          div id="basket"
             == render 'shared/basket' 
+        nav class="col-sm-3"
+          ul id="topul"
+            div id="icon"
+              a[href="https://www.facebook.com/groups/ZhittyaMislivtsiv/"] 
+                img.image_tag = image_tag('Facebook.png', height: '25', width: '25')
+            div id="icon"
+              a[href="https://www.youtube.com/channel/UC9pxec4wq-yMRjjXi9IvROQ?view_as=subscriber"] 
+                img.image_tag = image_tag('Youtube.png', height: '25', width: '25')
+            div id="icon"
+              a[href="https://twitter.com/"] 
+                img.image_tag = image_tag('Twitter.png', height: '25', width: '25')
+            div id="icon"
+              a[href="https://twitter.com/"] 
+                img.image_tag = image_tag('Github.png', height: '25', width: '25')
+        nav class="col-sm-2" id="user"
           <!-- логотип зарегаться -->
-          img src="https://png.icons8.com/ios/50/000000/contacts.png" width="30" height="30" style="border: 1px solid #AAAEB4; margin-left: 10px;"
           - if user_signed_in? 
             div style="margin-left: 0px;"
               = link_to('Редактировать профиль', edit_user_registration_path) 
@@ -44,20 +50,21 @@ html
             div style="margin-left: 10px;"
               = link_to('Авторизоваться', new_user_session_path)
 
-    nav id="navigation"        
-      nav style="border: 0.5px solid #AAAEB4; padding: 10px; background-color: #323200;"
-        a[class="nav-link" id="nav1" style="margin-left: 2px; font-size: 20px;" href="http://localhost:3000/categories/2"] Каталог Товаров
-        a[class="nav-link" id="nav2" style="font-size: 15px; padding-left: 10px;" href="http://localhost:3000/"] Главная
-        a[class="nav-link" style="font-size: 15px; padding-left: 10px;" href="http://localhost:3000/about_company"] О компании 
-        a[class="nav-link" style="font-size: 15px; padding-left: 10px;" href="http://localhost:3000/contact"] Контакты
-        a[class="nav-link" style="font-size: 15px; padding-left: 10px;" href="http://localhost:3000/articles"] Статьи
+  nav id="navigation"        
+    nav id="top2"
+      a[class="nav-link" style="margin-left: -10px; font-size: 20px;" href="http://localhost:3000/categories/2"] Каталог Товаров
+      a[class="nav-link" style="font-size: 15px; padding-left: 300px;" href="http://localhost:3000/"] Главная
+      a[class="nav-link" style="font-size: 15px; padding-left: 40px;" href="http://localhost:3000/about_company"] О компании 
+      a[class="nav-link" style="font-size: 15px; padding-left: 40px;" href="http://localhost:3000/contact"] Контакты
+      a[class="nav-link" style="font-size: 15px; padding-left: 40px;" href="http://localhost:3000/articles"] Статьи
 
-    nav class="category_end_yield"
-      nav class="row"
-        div class="col-sm-2"
-          == render 'shared/submenu'
-        div class="col-sm-10"
-          = yield
-      nav class="row"
-        div class="col-sm-12" style="margin-left: 2px; margin-top: 10px;"
-          == render 'shared/category'
+  nav class="row"
+    div class="col-sm-2"
+      == render 'shared/submenu'
+    div class="col-sm-10" id="productsindex_end_yield"
+      = yield
+    nav class="row"
+      div class="col-sm-12" style="margin-left: 2px; margin-top: 10px;"
+        == render 'shared/category'
+
+  nav id="bottom"
