--- a/app/views/carts/show.slim
+++ b/app/views/carts/show.slim
@@ -9,6 +9,6 @@ div class="modal-body"
             td colspan="2" Total
             td class="total_cell" = number_to_currency(@cart.total_price)
 div       
-  = button_to 'Очистить корзину', @cart, method: :delete, data: { confirm: 'Вы уверен?' }
+  = button_to 'Очистить корзину', @cart, method: :delete, data: { confirm: 'Вы уверены?' }
   = button_to 'Оформить заказ', new_order_path, method: :get
   = button_to 'Вернуться к покупкам', products_path, method: :get
