--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -68,3 +68,20 @@ html
         == render 'shared/category'
 
   nav id="bottom"
+    nav class="text-center"
+      ul
+        div id="iconbottom"
+          a[href="https://www.facebook.com/groups/ZhittyaMislivtsiv/"] 
+            img.image_tag = image_tag('Facebook.png', height: '25', width: '25')
+        div id="iconbottom"
+          a[href="https://www.youtube.com/channel/UC9pxec4wq-yMRjjXi9IvROQ?view_as=subscriber"] 
+            img.image_tag = image_tag('Youtube.png', height: '25', width: '25')
+        div id="iconbottom"
+          a[href="https://twitter.com/"] 
+            img.image_tag = image_tag('Twitter.png', height: '25', width: '25')
+        div id="iconbottom"
+          a[href="https://twitter.com/"] 
+            img.image_tag = image_tag('Github.png', height: '25', width: '25') 
+
+
+
