in contacts added feedback button and changed the design

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,6 +1,6 @@
 <body>
   <div class="row" id="contact_text">
-    <div class="col-sm-6">
+    <div class="col-sm-4">
       <strong>
         <span>ГРАФИК РАБОТЫ:</span>
       </strong>
@@ -12,7 +12,7 @@
         <span>выходной</span>
       </p>
     </div>
-    <div class="col-sm-2">
+    <div class="col-sm-4">
       <table>
         <tbody>
           <tr>
@@ -42,6 +42,9 @@
         </tbody>
       </table>
     </div>
+    <div class="col-sm-2">
+      <a class="btn btn-warning" href="http://localhost:3000/feedback" role="button">Обратная связь</a>
+      </table>
+    </div>
   </div>
 </body>
-
