corrected mistakes in navigation

--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -52,11 +52,11 @@ html
 
   nav id="navigation"        
     nav id="top2"
-      a[class="nav-link" style="margin-left: -10px; font-size: 20px;" href="http://localhost:3000/categories/2"] Каталог Товаров
-      a[class="nav-link" style="font-size: 15px; padding-left: 300px;" href="http://localhost:3000/"] Главная
-      a[class="nav-link" style="font-size: 15px; padding-left: 40px;" href="http://localhost:3000/about_company"] О компании 
-      a[class="nav-link" style="font-size: 15px; padding-left: 40px;" href="http://localhost:3000/contact"] Контакты
-      a[class="nav-link" style="font-size: 15px; padding-left: 40px;" href="http://localhost:3000/articles"] Статьи
+      a[class="nav-link" style="margin-left: -10px; font-size: 20px;" href="/categories/2"] Каталог Товаров
+      a[class="nav-link" style="font-size: 15px; padding-left: 300px;" href="http://18.217.52.16/"] Главная
+      a[class="nav-link" style="font-size: 15px; padding-left: 40px;" href="/about_company"] О компании 
+      a[class="nav-link" style="font-size: 15px; padding-left: 40px;" href="/contact"] Контакты
+      a[class="nav-link" style="font-size: 15px; padding-left: 40px;" href="/articles"] Статьи
 
   nav class="row"
     div class="col-sm-2"
