changed link feedback button

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -43,7 +43,7 @@
       </table>
     </div>
     <div class="col-sm-2">
-      <a class="btn btn-warning" href="http://localhost:3000/feedback" role="button">Обратная связь</a>
+      <a class="btn btn-warning" href="http://18.217.52.16/feedback" role="button">Обратная связь</a>
       </table>
     </div>
   </div>
